--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@types/mongodb": "^3.1.28",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "connect-mongo": "^3.0.0",
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "jquery": "^3.4.1",
     "mongodb": "^3.2.7",
     "nodemon": "^1.19.1",
@@ -17,6 +20,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/connect-mongo": "0.0.42",
     "@types/express": "^4.17.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.6.2",
